[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/MoveWindow/MoveWindow3x.png" type="Texture" id=1]
[ext_resource path="res://Src/WindowManager/BaseButtonPink.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/WindowManager/BaseButtonGreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Src/WindowManager/WindowBase.tscn" type="PackedScene" id=5]
[ext_resource path="res://Src/MoveWindow/Content.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/TitleFont24.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Fonts/NormalFontSmall13.tres" type="DynamicFont" id=8]

[node name="MoveWindow" instance=ExtResource( 5 )]
margin_left = -90.0
margin_top = -136.0
margin_right = 90.0
margin_bottom = 115.0
windowType = 1

[node name="Content" parent="." index="2"]
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="Content" index="0"]
margin_left = 3.0
margin_right = 177.0
margin_bottom = 219.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="Content" index="1"]
margin_left = 4.0
margin_top = 7.0
margin_right = 175.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 7 )
text = "MOVE_TITLE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Water" type="Label" parent="Content" index="2"]
margin_left = 58.0
margin_top = 66.0
margin_right = 161.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 8 )
text = "-120"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Food" type="Label" parent="Content" index="3"]
margin_left = 62.0
margin_top = 119.0
margin_right = 165.0
margin_bottom = 137.0
custom_fonts/font = ExtResource( 8 )
text = "-80"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Faith" type="Label" parent="Content" index="4"]
margin_left = 61.0
margin_top = 174.0
margin_right = 164.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 8 )
text = "+140"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseButtonGreen" parent="Content" index="5" instance=ExtResource( 4 )]
margin_left = 90.0
margin_top = 223.0
margin_right = 180.0
margin_bottom = 250.0

[node name="BaseButtonPink" parent="Content" index="6" instance=ExtResource( 3 )]
margin_top = 223.0
margin_bottom = 250.0
[connection signal="button_up" from="Content/BaseButtonGreen" to="Content" method="_on_BaseButtonGreen_button_up"]
[connection signal="button_up" from="Content/BaseButtonPink" to="Content" method="_on_BaseButtonPink_button_up"]
